--- a/C971 Isabella Grigolla/C971 Isabella Grigolla.csproj
+++ b/C971 Isabella Grigolla/C971 Isabella Grigolla.csproj
@@ -19,6 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\TermOverview.xaml.cs">
+      <DependentUpon>TermOverview.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\AppSettings.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -55,7 +61,7 @@
     <EmbeddedResource Update="Views\TermEdit.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\TermOverview 2.xaml">
+    <EmbeddedResource Update="Views\TermOverview.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
