--- a/C971 Isabella Grigolla/C971 Isabella Grigolla.csproj
+++ b/C971 Isabella Grigolla/C971 Isabella Grigolla.csproj
@@ -19,13 +19,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\Settings.xaml.cs">
+      <DependentUpon>Settings.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\TermOverview.xaml.cs">
       <DependentUpon>TermOverview.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Views\AppSettings.xaml">
+    <EmbeddedResource Update="Views\Settings.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\AssessmentAdd.xaml">
